frontend_tests/negative/excluded_channel/cmd/app/main.go
package main

var values chan int

func main() { _ = <-values }
